#260 - fixing z-index so joomla logo is clickable

--- a/web/administrator/templates/backman/scss/utilities/_hacks.scss
+++ b/web/administrator/templates/backman/scss/utilities/_hacks.scss
@@ -69,3 +69,8 @@
 .koowa .navbar-default .navbar-nav > .disabled > a {
   opacity: .75;
 }
+
+.navbar-header {
+  position: relative;
+  z-index: 2;
+}
